# ultra_sonic_radar_driver

./: CMakeLists.txt  README.md  package.xml
config/: config.param.yaml  config.yaml
include/ultra_sonic_radar_driver/: mc_log.hpp  ultra_sonic_radar_driver.hpp
launch/: mc_radar_driver.launch  mc_radar_driver.launch.xml  ultra_sonic_radar_driver.launch.xml
scripts/: fake_radar_publisher.py
src/: ultra_sonic_radar_driver.cpp  ultra_sonic_radar_driver_main.cpp
test/: configure_radar.sh  simulate_can_send.sh
